# ble_friend

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.c
main/include/: ble.h  ble_callbacks.h  ble_worker.h  crypto.h  device.h  disc.h  parser.h  request.h
main/include2/: ble2.h  ble_worker2.h  crypto2.h  crypto_worker2.h  parser2.h  request2.h  request_worker2.h  wifi_password.h
main/include2/ble/: ble2.h  ble_worker2.h
main/include2/crypto/: crypto2.h  crypto_worker2.h
main/include2/misc/: device2.h
main/include2/request/: request2.h  request_worker2.h
main/src/: ble_callbacks.c  ble_nimble.c  crypto.c  device_nvs.c  disc_nimble.c  parser.c  request.c
main/src2/: ble2.c  ble_worker2.c  crypto2.c  crypto_worker2.c  device2.c  disc2.c  parser2.c  request2.c  request_worker.c
main/test/: test_crypto.c  test_parser.c
main/test/callbacks/: makefile  test_callbacks.c
main/test/callbacks/mock/: mock_disc.c
main/test/crypto/: test_crypto.c
main/test/parser/: test_parser.c
